--- a/index.html
+++ b/index.html
@@ -4,8 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mitoes QuizZ</title>
-    <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/defaults.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>miToes QuizZ</h1>
+    </header>
+    <main>
+      <section class="card">
+        <label class="bookmark" aria-label="Bookmark"></label>
+        <h2 class="question">What property flips the axes in flexbox?</h2>
+        <button>Show answer</button>
+        <ul class="categories">
+          <li>#css</li>
+          <li>#flexbox</li>
+          <li>#html</li>
+        </ul>
+      </section>
+      <section class="card">
+        <label class="bookmark" aria-label="Bookmark"></label>
+        <h2 class="question">What property flips the axes in flexbox?</h2>
+        <button>Show answer</button>
+        <ul class="categories">
+          <li>#css</li>
+          <li>#flexbox</li>
+          <li>#html</li>
+        </ul>
+      </section>
+      <section class="card">
+        <label class="bookmark" aria-label="Bookmark"></label>
+        <h2 class="question">What property flips the axes in flexbox?</h2>
+        <button>Show answer</button>
+        <ul class="categories">
+          <li>#css</li>
+          <li>#flexbox</li>
+          <li>#html</li>
+        </ul>
+      </section>
+      <section class="card">
+        <label class="bookmark" aria-label="Bookmark"></label>
+        <h2 class="question">What property flips the axes in flexbox?</h2>
+        <button>Show answer</button>
+        <ul class="categories">
+          <li>#css</li>
+          <li>#flexbox</li>
+          <li>#html</li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <nav class="nav">
+        <ul>
+          <li>
+            <a href="" aria-label="Home">
+              <div class="home"></div>
+            </a>
+          </li>
+          <li>
+            <a href="" aria-label="Bookmark">
+              <div class="bookmark"></div>
+            </a>
+          </li>
+          <li>
+            <a href="" aria-label="profile">
+              <div class="profile"></div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
