add js for darkmode

--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <title>mitoes QuizZ</title>
     <link rel="stylesheet" href="./css/defaults.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="js/darkthemetoggle.js" defer></script>
   </head>
   <body>
+    <div class="area">
+      <ul class="circles">
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+        <li>?</li>
+      </ul>
+    </div>
     <header>
       <h1>miToes QuizZ</h1>
     </header>
@@ -57,7 +72,7 @@
       <nav class="nav">
         <ul>
           <li>
-            <a href="" aria-label="Home">
+            <a href="index.html" aria-label="Home">
               <div class="home"></div>
             </a>
           </li>
@@ -67,7 +82,7 @@
             </a>
           </li>
           <li>
-            <a href="" aria-label="profile">
+            <a href="profile.html" aria-label="profile">
               <div class="profile"></div>
             </a>
           </li>
