--- a/form.html
+++ b/form.html
@@ -6,6 +6,8 @@
     <title>mitoes QuizZ</title>
     <link rel="stylesheet" href="./css/defaults.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/newQuestions.css" />
+
     <script src="./js/toggles.js" defer></script>
     <script src="./js/darkthemetoggle.js" defer></script>
   </head>
@@ -27,40 +29,43 @@
     <header>
       <h1>miToes QuizZ</h1>
     </header>
-    <main>
-      <section class="card">
-        <label
-          class="bookmark"
-          aria-label="Bookmark"
-          data-js="bookmark"
-        ></label>
-        <h2 class="question">What property flips the axes in flexbox?</h2>
-        <button data-js="answer">Show</button>
-        <p class="anwser hide" data-js="this-is-the-answer">
-          Here is your answer!
-        </p>
-        <ul class="categories">
-          <li>#css</li>
-          <li>#flexbox</li>
-          <li>#html</li>
-        </ul>
-      </section>
-      <section class="card">
-        <label
-          class="bookmark"
-          aria-label="Bookmark"
-          data-js="bookmark"
-        ></label>
-        <h2 class="question">What property flips the axes in flexbox?</h2>
-        <button data-js="answer">Show</button>
-        <p class="anwser hide" data-js="this-is-the-answer">
-          Here is your answer!
-        </p>
-        <ul class="categories">
-          <li>#css</li>
-          <li>#flexbox</li>
-          <li>#html</li>
-        </ul>
+    <main class="new_questions">
+      <section>
+        <form>
+          <h2>Add new Questions!</h2>
+          <fieldset>
+            <legend>Your question:</legend>
+            <textarea
+              id="question"
+              type="text"
+              name="question"
+              rows="7"
+              placeholder="Your question"
+              aria-describedby="your question"
+            ></textarea>
+          </fieldset>
+          <fieldset>
+            <legend>Your answer:</legend>
+            <textarea
+              id="answer"
+              type="text"
+              rows="7"
+              placeholder="Your answer"
+              aria-describedby="your answer"
+            ></textarea>
+          </fieldset>
+          <fieldset>
+            <label for="tag">Tag:</label>
+            <input
+              id="tag"
+              name="tag"
+              type="text"
+              aria-describedby="A tag for your question"
+              placeholder="Tag your question!"
+            />
+          </fieldset>
+          <button type="submit">Submit</button>
+        </form>
       </section>
     </main>
     <footer>
@@ -77,7 +82,7 @@
             </a>
           </li>
           <li>
-            <a href="form.html" aria-label="new_questions">
+            <a href="new_questions.html" aria-label="new_questions">
               <div class="question"></div>
             </a>
           </li>
