js to create new questioncard - wip

--- a/form.html
+++ b/form.html
@@ -10,6 +10,8 @@
 
     <script src="./js/toggles.js" defer></script>
     <script src="./js/darkthemetoggle.js" defer></script>
+    <script src="./js/questionform.js" defer></script>
+    <script src="./js/toggles.js" defer></script>
   </head>
   <body>
     <div class="area">
@@ -31,7 +33,7 @@
     </header>
     <main class="new_questions">
       <section>
-        <form>
+        <form data-js="form">
           <h2>Add new Questions!</h2>
           <fieldset>
             <legend>Your question:</legend>
