--- a/form.html
+++ b/form.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/newQuestions.css" />
 
-    <script src="./js/toggles.js" defer></script>
     <script src="./js/darkthemetoggle.js" defer></script>
-    <script src="./js/questionform.js" defer></script>
     <script src="./js/toggles.js" defer></script>
+    <script src="./js/questionform.js" defer></script>
     <script src="./js/counter.js" defer></script>
   </head>
   <body>
@@ -45,8 +44,9 @@
               rows="7"
               placeholder="Your question"
               aria-describedby="your question"
+              data-js="question"
             ></textarea>
-            <p><span data-js="charCount">150</span> characters left</p>
+            <small><span data-js="charCount">150</span> characters left</small>
           </fieldset>
           <fieldset>
             <legend>Your answer:</legend>
@@ -56,8 +56,9 @@
               rows="7"
               placeholder="Your answer"
               aria-describedby="your answer"
+              data-js="answer"
             ></textarea>
-            <p><span data-js="charCount">150</span> characters left</p>
+            <small><span data-js="charCount">150</span> characters left</small>
           </fieldset>
           <fieldset>
             <label for="tag">Tag:</label>
@@ -67,6 +68,7 @@
               type="text"
               aria-describedby="A tag for your question"
               placeholder="Tag your question!"
+              data-js="tag"
             />
           </fieldset>
           <button type="submit">Submit</button>
